😃 Updated CSS to solve horizontal scrolling, changed 'dev-help' to 'for developers' and added btn-inverse

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -3,6 +3,7 @@ footer {
   padding: 1em;
   font-size: 1.1rem;
   background-color: #38b6ff;
+  max-width: 100vw;
 }
 footer p {
   margin: 1em;
